fixed smooth scrollbar on mobile, refactored card_row data to props, refactored background styles to match new folder structure

--- a/app/webpack/components/card_row/card_row.scss
+++ b/app/webpack/components/card_row/card_row.scss
@@ -2,7 +2,7 @@
 
 .card-row {
 	padding: 50px 20px;
-	background-color: white;
+	background: white;
 	&__title {
 		margin-bottom: 40px;
 		text-align: center;
