--- a/app/webpack/components/header/navigation/navigation_item/_navigation_item.scss
+++ b/app/webpack/components/header/navigation/navigation_item/_navigation_item.scss
@@ -5,4 +5,5 @@
 	font-family: $font-alt;
 	text-transform: uppercase;
 	color: white;
+	mix-blend-mode: difference;
 }
